// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PostFooter enables tooltip when myvote is false 1`] = `
<div
  data-stylename="footer"
>
  <PeopleInfo
    excludePersonId="2"
    people={
      Array [
        Object {
          "avatarUrl": "",
          "id": "1",
          "name": "Joe Smith",
        },
        Object {
          "avatarUrl": "",
          "id": "2",
          "name": "Sue Jones",
        },
        Object {
          "avatarUrl": "",
          "id": "3",
          "name": "Scary Terry",
        },
        Object {
          "avatarUrl": "",
          "id": "4",
          "name": "John Larkin",
        },
      ]
    }
    peopleTotal={4}
  />
  <a
    data-for="postfooter-tt-undefined"
    data-stylename="vote-button"
    data-tip="Upvote this post so more people see it."
    data-tip-disable={false}
    onClick={[Function]}
  >
    <Icon
      data-stylename="arrowIcon"
      name="ArrowUp"
    />
    3
  </a>
  <Tooltip
    delay={550}
    id="postfooter-tt-undefined"
  />
</div>
`;

exports[`PostFooter matches the latest snapshot 1`] = `
<div
  data-stylename="footer"
>
  <PeopleInfo
    excludePersonId="2"
    people={
      Array [
        Object {
          "avatarUrl": "",
          "id": "1",
          "name": "Joe Smith",
        },
        Object {
          "avatarUrl": "",
          "id": "2",
          "name": "Sue Jones",
        },
        Object {
          "avatarUrl": "",
          "id": "3",
          "name": "Scary Terry",
        },
        Object {
          "avatarUrl": "",
          "id": "4",
          "name": "John Larkin",
        },
      ]
    }
    peopleTotal={4}
  />
  <a
    data-for="postfooter-tt-undefined"
    data-stylename="vote-button voted"
    data-tip="Upvote this post so more people see it."
    data-tip-disable={true}
    onClick={[Function]}
  >
    <Icon
      data-stylename="arrowIcon"
      name="ArrowUp"
    />
    3
  </a>
  <Tooltip
    delay={550}
    id="postfooter-tt-undefined"
  />
</div>
`;

exports[`PostFooter matches the latest snapshot for event 1`] = `
<div
  data-stylename="footer"
>
  <PeopleInfo
    people={Array []}
    peopleTotal={0}
  />
  <Tooltip
    delay={550}
    id="postfooter-tt-undefined"
  />
</div>
`;

exports[`PostFooter matches the latest snapshot for project 1`] = `
<div
  data-stylename="footer"
>
  <PeopleInfo
    excludePersonId="2"
    people={Array []}
    peopleTotal={0}
  />
  <a
    data-for="postfooter-tt-undefined"
    data-stylename="vote-button"
    data-tip="Upvote this post so more people see it."
    onClick={[Function]}
  >
    <Icon
      data-stylename="arrowIcon"
      name="ArrowUp"
    />
    0
  </a>
  <Tooltip
    delay={550}
    id="postfooter-tt-undefined"
  />
</div>
`;
